--- a/src/components/Wrapper/Wrapper.css
+++ b/src/components/Wrapper/Wrapper.css
@@ -1,1 +1,16 @@
 /* Wrapper.css */
+
+.wrapper {
+    margin-top: 10px;
+    margin-bottom: 20px;
+    background: red;
+    height: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    flex-wrap: wrap;
+    padding: 20px;
+    justify-content: center;
+    align-content: center;
+    flex-direction: row;
+    border-radius: 10px;
+}
