--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,1 +1,18 @@
 /* Card.css */
+
+.card {
+    border-radius: 2px;
+    height: 150px;
+    margin: 1rem;
+    position: relative;
+    width: 200px;
+    box-shadow: 0 3px 6px #999, 0 3px 6px #999;
+    background: red;
+    border-radius: 6px;
+}
+
+.img-container {
+    text-align: center;
+    margin-top: auto;
+    margin-bottom: auto;
+}
