url link edited

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .jumbotron {
-    background-image: url("/public/image/memoryIndex.jpg");
+    background-image: url("../image/memoryIndex.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
