--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,18 @@
 .jumbotron {
-    background-image: url("../image/memoryIndex.jpg");
+    background-image: url("/image/memoryIndex.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+}
+
+.jumbop {
+    color: white;
+    font-size: 35px;
+    text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+}
+
+h1 {
+    color: white;
+    font-size: 45px;
+    text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
 }
